--- a/dia2.html
+++ b/dia2.html
@@ -12,6 +12,8 @@
     <div class="segundos"></div>
     <div class="minutos"></div>
     <div class="horas"></div>
+    <div class="hola"></div>
+
   
   
     <script src=dia2.js></script>
